Temporary workaround to make Nepomuk work with Network Attached Storages.

There is now a list of blacklisted urls which will not be checked in the Invalid-Resource-File-Cleaner. 
The required config in nepomukserverrc is - 

[Service-nepomukfilewatch]
Deletion Blacklist[$e]=/home/v/,/media/juil/

BUG: 250776


svn path=/trunk/KDE/kdebase/runtime/; revision=1211346